--- a/El-Gamal Crypto-Scheme.ipynb
+++ b/El-Gamal Crypto-Scheme.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Group-11 \n",
-    "+ Ritu Thombre (BT17CSE084)"
+    "## Aditya Joshi \n",
+    
    ]
   },
   {
