--- a/RSA.ipynb
+++ b/RSA.ipynb
@@ -1,14 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Group-11 \n",
-    "+ Ritu Thombre (BT17CSE084)"
-   ]
-  },
-  {
+ "cells": [  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
